<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Tombol Browser -->
    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3DCE0C"
        android:text="@string/button_label_browser"
        android:textColor="@color/white" />

    <!-- Tombol Toast -->
    <Button
        android:id="@+id/button_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/button_label_toast"
        android:textColor="@color/white" />

    <!-- TextView Count -->
    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/count_initial_value"
        android:textSize="160sp"
        android:layout_marginTop="30dp" />

    <!-- Tombol Count -->
    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/button_label_count"
        android:textColor="@color/white" />

    <!-- Tombol Switch Page -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_switchpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/warnabiru"
        android:text="@string/button_label_pindah"
        android:textColor="@color/white"
        app:cornerRadius="20dp" />

    <!-- Tombol Maps -->
    <Button
        android:id="@+id/button_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/warnabiru"
        android:text="@string/buka_maps"
        android:textColor="@color/white" />

    <!-- Tombol Kontak -->
    <Button
        android:id="@+id/button_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/warnabiru"
        android:text="@string/buka_kontak"
        android:textColor="@color/white" />

</LinearLayout>